# ms-boilerplate

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
config/: beta.yaml  default.yaml  develop.yaml  local.yaml  prod.yaml  test.yaml
migrations/: env.py
src/api/: deps.py  main.py  trace_codes.py
src/builder/: __init__.py  clients.py  helper.py  repo.py
src/common/: __init__.py  constants.py  types.py
src/config/: __init__.py  aws.py  common.py  config.py  server.py
src/pkg/: config.py  db.py  errors.py  logging.py  s3.py  salesforce.py  sqs.py  utils.py
src/worker/: __init__.py  main.py  trace_codes.py
